# csa-lab-4

./: README.md  golden_test.py  isa.py  machine.py  microcode.py  pyproject.toml  translator.py
.github/workflows/: python.yaml
examples/: alloc_demo.forth  cat.forth  double_arith.forth  euler6.forth  exec_token.forth  harvard_demo.forth  hello.forth  hello_user_name.forth  palindrome.forth  pstr_demo.forth  sort.forth  sum.forth  variables_demo.forth
golden/: cat.yml  double_arith.yml  euler6.yml  exec_token.yml  harvard_demo.yml  hello.yml  hello_user_name.yml  pstr_demo.yml  sort.yml  variables_demo.yml
