[project]
name = "csa-lab-4"
version = "0.1.0"
description = "forth + stack isa"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "pytest-golden>=0.2.2",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["isa", "translator", "machine", "microcode"]

[tool.pytest.ini_options]
log_format = "%(message)s"
enable_assertion_pass_hook = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "RUF001", # ambiguous unicode in strings
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
